typescript/checker/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName5.ts.stderr
error: TS1042
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName5.ts:2:11
  |
2 | var v = { public get [e]() { } };
  |           ^^^^^^

error: TS2378 {
    span: Span {
        lo: BytePos(
            36,
        ),
        hi: BytePos(
            39,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName5.ts:2:22
  |
2 | var v = { public get [e]() { } };
  |                      ^^^

error: UndefinedSymbol {
    sym: Atom('e' type=inline),
    span: Span {
        lo: BytePos(
            37,
        ),
        hi: BytePos(
            38,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName5.ts:2:23
  |
2 | var v = { public get [e]() { } };
  |                       ^

